# vr_project

./: .clang-format  .gitignore  .pre-commit-config.yaml  AGENT.md  CMakeLists.txt  LICENSE  Makefile  README.md  build_debug.sh  build_release.sh  test_script.txt
.github/workflows/: ci.yml
docs/: architecture.md  development.md  history.md  rendering-pipeline.md  world-format.md
res/: cube.txt  office.txt  process_obj.py  teapot.txt
scripts/precommit/: check_merge_conflicts.py  fix_text_whitespace.py
src/: collide.cpp  collide.h  collide.hpp  color.cpp  color.hpp  defs.h  defs.hpp  error.cpp  error.h  error.hpp  graphics.cpp  graphics.h  graphics.hpp  hack.h  instance.cpp  instance.hpp  light.cpp  light.hpp  main.cpp  master.hpp  mouse.cpp  mouse.h  mouse.hpp  options.cpp  options.hpp  palette.cpp  palette.h  palette.hpp  parse.cpp  parse.h  parse.hpp  pcomnds.cpp  pcomnds.h  pcomnds.hpp  pfuncs.cpp  pfuncs.h  pfuncs.hpp  program.cpp  program.h  program.hpp  (+16 more)
tests/: test_world_loading.cpp
